Kubernetes/k8sElastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yc-elasticsearch
  namespace: file-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yc-elasticsearch
  template:
    metadata:
      labels:
        app: yc-elasticsearch
    spec:
      volumes:
        - name: config
          configMap:
            name: elasticsearch-config-yc
            defaultMode: 420
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: file-search-elastic-pvc
      containers:
        - name: yc-elasticsearch
          image: es01:latest
          imagePullPolicy: Never
          # command: ["chmod 777 /usr/share/elasticsearch/data"]
          lifecycle:
            postStart:
              exec:
                command:
                  ["/bin/sh", "-c", "chmod 777 /usr/share/elasticsearch/data"]
          readinessProbe:
            exec:
              command: [
                  "/bin/sh",
                  "-c",
                  "curl -X PUT 'http://elastic:test@localhost:9200/filesindex'",
                  "curl -X POST  'http://elastic:test@localhost:9200/fileIndex/_mapping' -H 'Content-Type:application/json' -d {
                  'mappings': {
                  'article': {
                  'properties': {
                  'content': {
                  'type': 'text',
                  'store': true,
                  'index':true,
                  'analyzer':'ik_max_word'
                  }
                  }
                  }
                  }
                  }",
                ]
            initialDelaySeconds: 60
            timeoutSeconds: 10
          ports:
            - containerPort: 9200
              protocol: TCP
            - containerPort: 9300
              protocol: TCP
          resources:
            limits:
              cpu: 1
              memory: 1024Mi
            requests:
              cpu: 500m
              memory: 1024Mi
          volumeMounts:
            - name: config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
            # - mountPath: /usr/share/elasticsearch/data
            #   name: elasticsearch-data
            - name: elasticsearch-data #要與volumes 裡面name一樣
              mountPath: /usr/share/elasticsearch/data
---
apiVersion: v1
kind: Service
metadata:
  name: yc-elasticsearch
  namespace: file-service
spec:
  ports:
    - name: yc-elasticsearch
      protocol: TCP
      port: 9200
      targetPort: 9200
  selector:
    app: yc-elasticsearch
  type: ClusterIP
  sessionAffinity: None
