Kubernetes/k8sMongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: file-service
  labels:
    name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongod
  namespace: file-service
spec:
  # serviceName: mongodb-service
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        # environment: test
        # replicaset: MainRepSet
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
        - name: mongodb-persistent-storage-claim
          persistentVolumeClaim:
            claimName: file-search-mongo-pvc
      containers:
        - name: mongod-container
          image: mongo_service:latest
          imagePullPolicy: Never
          resources:
            limits:
              cpu: 1
              memory: 1024Mi
            requests:
              cpu: 500m
              memory: 1024Mi
          # livenessProbe:
          #   exec:
          #     command:
          #       - mongo
          #       - --disableImplicitSessions
          #       - --eval
          #       - "db.adminCommand('ping')"
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   successThreshold: 1
          #   failureThreshold: 6
          readinessProbe:
            exec:
              command:
                [
                  "/bin/sh",
                  "-c",
                  "mongoimport --authenticationDatabase admin --username root --password example -d media --collection token --file /seeder.json  --jsonArray",
                ]
                # - /bin/my-script.sh
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-persistent-storage-claim
              mountPath: /data/db
  # volumeClaimTemplates:
  #   - metadata:
  #       name: mongodb-persistent-storage-claim
  #     spec:
  #       accessModes: ["ReadWriteOnce"]
  #       resources:
  #         requests:
  #           storage: 1Gi
